<resources>
    <string name="app_name">Coffee Ordering</string>
    <string name="coffee">coffee</string>
    <string name="cream">cream</string>
    <string name="chocolate">chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">order</string>
    <string name="summary">ORDER SUMMARY</string>
</resources>